--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,11 @@
     font-family: BebasNeue-Regular;
     src: url(../public/fonts/BebasNeue-Regular.ttf);
   }
+@font-face {
+  font-family: Chango-Regular;
+  src: url(../public/fonts/Chango-Regular.ttf);
+}
+
 
 * {
     color: aquamarine;
