styles changes, looks much better, need better 3D model background, still need the links to the projects and better images/videos

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,10 +9,11 @@
 
 
 * {
-    color: aquamarine;
+    color:#2c3e50;
     font-family: BebasNeue-Regular, sans-serif;
 }
 
 html {
-  background-color: rgb(20, 31, 51);
+  // background-color: rgb(20, 31, 51);
+  background-color: #99cccc;
 }
